# usage-of-variables

./: .gitignore  README.md
advanced-gui/: CMakeLists.txt
any-names/: CMakeLists.txt
cache-cmakecachetxt/: CMakeLists.txt
cache-confuse/: CMakeLists.txt
cache-enum/: CMakeLists.txt
cache-no-scope/: CMakeLists.txt
cache-no-scope/boo/: CMakeLists.txt
cache-remove-regular/: CMakeLists.txt
cache-type/: CMakeLists.txt
cache-type/bar/: info.txt
cache-vs-regular/: CMakeLists.txt
case-sensitive/: CMakeLists.txt
dereference/: CMakeLists.txt
directory-scope/: CMakeLists.txt
directory-scope/boo/: CMakeLists.txt
double-set/1/: CMakeLists.txt
empty-list/: CMakeLists.txt
env-configure/: CMakeLists.txt  script.cmake
env-depends/: CMakeLists.txt
env-inherit/: CMakeLists.txt  level1.cmake  level2.cmake
force/: CMakeLists.txt
force-workaround/: CMakeLists.txt
from-cache/: CMakeLists.txt
grouped-options/: CMakeLists.txt
initial-cache/: CMakeLists.txt  cache.cmake
internal-force/: CMakeLists.txt
internal-gui/: CMakeLists.txt
list/: CMakeLists.txt
list-operations/: CMakeLists.txt
nested-dereference/: CMakeLists.txt
no-force-confuse/: CMakeLists.txt
option/: CMakeLists.txt
parent-scope/: CMakeLists.txt
project-customization/: CMakeLists.txt
quotes/: CMakeLists.txt
read-env/: CMakeLists.txt
same-scope/: CMakeLists.txt  modify-abc.cmake
set-env/: CMakeLists.txt
take-from-parent-scope/: CMakeLists.txt
types-of-variable/: CMakeLists.txt
unset-cache/: CMakeLists.txt
unset-env/: CMakeLists.txt
(+3 files in other folders)
